add news_spider and repair a few bug

--- a/public/html/courseall.html
+++ b/public/html/courseall.html
@@ -1,7 +1,7 @@
 <div class="navbar">
   <div class="navbar-inner">
     <div class="left"><a href="#" class="link back"> <i class="icon icon-back"></i><span>返回</span></a></div>
-    <div class="center sliding">全部课程</div>
+    <div class="center sliding">课程列表</div>
   </div>
 </div>
 <div class="pages">
@@ -22,6 +22,7 @@
 				height:34px;
 			} 
 			#nocoursetip{width:100%;text-align:center;}
+			.get_course .card-header{max-height: 200px;}
 		</style>
     <div class="page-content infinite-scroll">
 			<div class="list-block">
